examples/wordsmith/api-deployment-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: words-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: api
  selector:
    app: words-api
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: words
  labels:
    app: words-api
    version: v1
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: words-api
        version: v1
    spec:
      containers:
      - name: words
        image: djkormo/k8s-wordsmith-api:v1
        ports:
        - containerPort: 8080
          name: api
        resources:
          limits:
            cpu: "0.2"
            memory: "50Mi"
          requests:
            cpu: "0.1"
            memory: "25Mi"
        readinessProbe:
          httpGet:
            path: /noun
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 2
        livenessProbe:
          httpGet:
            path: /noun
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 10
          failureThreshold: 3
