examples/wordsmith/db-deployment-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: words-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: db
  selector:
    app: words-db
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: db
  labels:
    app: words-db
    version: v1
spec:
  template:
    metadata:
      labels:
        app: words-db
        version: v1
    spec:
      containers:
      - name: db
        image: djkormo/k8s-wordsmith-db:v1
        ports:
        - containerPort: 5432
          name: db
        resources:
          limits:
            cpu: "0.2"
            memory: "50Mi"
          requests:
            cpu: "0.1"
            memory: "10Mi"  

        readinessProbe:
          exec:
            command: ["psql", "-w", "-U", "postgres", "-d", "postgres", "-c", "SELECT 1"]
          initialDelaySeconds: 15
          timeoutSeconds: 2
        livenessProbe:
          exec:
            command: ["psql", "-w", "-U", "postgres", "-d", "postgres", "-c", "SELECT 1"]
          initialDelaySeconds: 30
          timeoutSeconds: 2
