examples/wordsmith/web-deployment-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: words-web
spec:
  ports:
    - port: 8081
      targetPort: 80
      name: web
  selector:
    app: words-web
  type: LoadBalancer
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web
  labels:
    app: words-web
    version: v1
spec:
  template:
    metadata:
      labels:
        app: words-web
        version: v1
    spec:
      containers:
      - name: web
        image: djkormo/k8s-wordsmith-web:v1
        ports:
        - containerPort: 80
          name: words-web
        resources:
          limits:
            cpu: "0.2"
            memory: "50Mi"
          requests:
            cpu: "0.1"
            memory: "25Mi" 
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 2

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 10
          failureThreshold: 3
