examples/wordsmith/np-web-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-netpol
spec:
  podSelector:
    matchLabels:
      app: words-web
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: []
    ports:
     - port: 80
       protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: words-api
    ports:
     - port: 8080
       protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
     - port: 53
       protocol: UDP
